Library/AXL(Library)/C, C++/AXM.h

// Return DriveStatus register (status of in-motion) of specific Axis.
// Caution: All Motion Product is different Hardware bit signal. Let's refer Manual and AXHS.xxx
DWORD    __stdcall AxmStatusReadMotion(long lAxisNo, DWORD *upStatus);
// Start to detect origin.
// When origin detecting start API is executed, thread which will detect origin of relevant axis in the library is created automatically and it is automatically closed after carrying out of the origin detecting in sequence.
DWORD    __stdcall AxmHomeSetStart(long lAxisNo);
//========= Position move API ===============================================================================================================

// If you want to set specified velocity unit in RPM(Revolution Per Minute),
// ex>    calculate rpm :
// 4500 rpm ?
// When unit/ pulse = 1 : 1, then it becomes pulse per sec, and
// if you want to set at 4500 rpm , then  4500 / 60 sec : 75 revolution / 1sec
// The number of pulse per 1 revolution of motor shall be known. This can be know by detecting of Z phase in Encoder.
// If 1 revolution:1800 pulse,  75 x 1800 = 135000 pulses are required.
// Operate by input Unit = 1, Pulse = 1800 into AxmMotSetMoveUnitPerPulse.

// Travel up to set distance or position.
// It moves by set velocity and acceleration up to the position set by absolute coordinates/ relative coordinates of specific axis.
// Velocity profile is set in AxmMotSetProfileMode API.
// It separates from API at the timing of pulse output start.
DWORD    __stdcall AxmMoveStartPos(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel);
// Move by set velocity.
// It maintain velocity mode move by velocity and acceleration  set against to specific axis.
// It separates from API at the timing of pulse output start.
// It moves toward to CW direction when Vel value is positive, CCW when negative.
DWORD    __stdcall AxmMoveVel(long lAxisNo, double dVel, double dAccel, double dDecel);
// Is set by the distance to the target axis position or the position to increase or decrease the movement begins.
// lEvnetAxisNo    : Start condition occurs axis.
// dComparePosition: Conditions Occurrence Area of Start condition occurs axis.
// uPositionSource : Set Conditions Occurrence Area of Start condition occurs axis => COMMAND(0), ACTUAL(1)
// Cancellations after reservation AxmMoveStop, AxmMoveEStop, AxmMoveSStop use
// Motion Axis and Start condition occurs axis must be In same group(case by 2V04 In same module).
DWORD    __stdcall AxmMoveStartPosWithPosEvent(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel, long lEventAxisNo, double dComparePosition, DWORD uPositionSource);
// It slowdown stops by deceleration set for specific axis.
// dDecel : Deceleration value when stop.
DWORD    __stdcall AxmMoveStop(long lAxisNo, double dDecel);
// It slowdown stops by deceleration set for specific axis.(PCI-Nx04 Only)
// This API can decelerating immediately refardless of current acceleration/deceleration state. Also, it can be used for limited drive.
// -- Applicable functions : AxmMoveStartPos, AxmMoveVel, AxmLineMoveEx2.
// dDecel : Deceleration rate value at stop.
// Note : Deceleration rate value should be greater than or equal to deceleration rate of initial setting.
// Note : When deceleration setting is set to time unit, It must be less than or equal to initial settling time.
DWORD    __stdcall AxmMoveStopEx(long lAxisNo, double dDecel);
// Stops specific axis emergently .
DWORD    __stdcall AxmMoveEStop(long lAxisNo);
// Stops specific axis slow down.
DWORD    __stdcall AxmMoveSStop(long lAxisNo);
//========= Overdrive API ============================================================================
// Overdrives position.
// Adjust number of specific pulse before the move of specific axis is finished.
// Cautions : In here when put in the position subjected to overdrive, as the travel distance is put into the position value of relative form,
//            position must be put in as position value of relative form.
DWORD    __stdcall AxmOverridePos(long lAxisNo, double dOverridePos);
// Set the maximum velocity subjected to overdirve before velocity overdriving of specific axis.
// Caution : If the velocity overdrive is done 5 times, the max velocity shall be set among them.
DWORD    __stdcall AxmOverrideSetMaxVel(long lAxisNo, double dOverrideMaxVel);
// Overdrive velocity.
// Set velocity variably during the move of specific axis. (Make sure to set variably during the motion.)
// Caution: Before use of AxmOverrideVel API, set the maximum velocity which can be set by AxmOverrideMaxVel
// EX> If velocity overdrive two times,
// 1. Set the highest velocity among the two as the highest setting velocity of AxmOverrideMaxVel.
// 2. Set the AxmOverrideVel  variably with the velocity in the moving of AxmMoveStartPos execution specific axis (including move API all) as the first velocity.
// 3. Set the AxmOverrideVel  variably with the velocity in the moving of specific axis (including move API all) as the 2nd velocity.
DWORD    __stdcall AxmOverrideVel(long lAxisNo, double dOverrideVel);
// Overdrive velocity.
// Set velocity variably during the move of specific axis. (Make sure to set variably during the motion.)
// Caution: Before use of AxmOverrideVel API, set the maximum velocity which can be set by AxmOverrideMaxVel
// EX> If velocity overdrive two times,
// 1. Set the highest velocity among the two as the highest setting velocity of AxmOverrideMaxVel.
// 2. Set the AxmOverrideAccelVelDecel  variably with the velocity in the moving of AxmMoveStartPos execution specific axis (including move API all) as the first velocity.
// 3. Set the AxmOverrideAccelVelDecel  variably with the velocity in the moving of specific axis (including move API all) as the 2nd velocity.
DWORD    __stdcall AxmOverrideAccelVelDecel(long lAxisNo, double dOverrideVelocity, double dMaxAccel, double dMaxDecel);
// Velocity overdrive at certain timing.
// API which becomes overdrive at the position when a certain position point and velocity to be overdrived
// lTarget : COMMAND(0), ACTUAL(1)
DWORD    __stdcall AxmOverrideVelAtPos(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel,double dOverridePos, double dOverrideVel, long lTarget);
// Override with specified velocity at specified times.
// lArraySize     : Set number of positions to override.
// *dpOverridePos : An array of positions to override. (It should be greater than or equal to set value at lArraySize.)
// *dpOverrideVel : Velocity array to be changed at position to override. (It should be greater than or equal to set value at lArraySize.)
// lTarget        : COMMAND(0), ACTUAL(1)
// dwOverrideMode : Specify how to start overriding.
//                : OVERRIDE_POS_START(0) - Start override at specified velocity at specified position.
//                : OVERRIDE_POS_END(1)   - Start override in advance to become specified velocity at specified position.
DWORD    __stdcall AxmOverrideVelAtMultiPos(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel, long lArraySize, double* dpOverridePos, double* dpOverrideVel, long lTarget, DWORD dwOverrideMode);
//========= Move API by master, slave gear ration. ===========================================================================

// Override with specified velocity/acceleration/deceleration at specified times.(MLII Only)
// lArraySize     : Set number of positions to override.
// *dpOverridePos : An array of positions to override. (It should be greater than or equal to set value at lArraySize.)
// *dpOverrideVel : Velocity array to be changed at position to override. (It should be greater than or equal to set value at lArraySize.)
// *dpOverrideAccelDecel : Acceleration/Deceleration array to be changed at position to override. (It should be greater than or equal to set value at lArraySize.)
// lTarget        : COMMAND(0), ACTUAL(1)
// dwOverrideMode : Specify how to start overriding.
//                : OVERRIDE_POS_START(0) - Start overriding at specified velocity at specified position.
//                : OVERRIDE_POS_END(1)   - Start overriding in advance to become specified velocity at specified position.
//                : OVERRIDE_POS_AUTO(2)  - Start overriding at specified velocity at specified position when in acceleration section.
//                                          Also, start overriding in advance to become specified velocity at specified position when in deceleration section.
DWORD    __stdcall AxmOverrideVelAtMultiPos2(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel, long lArraySize, double* dpOverridePos, double* dpOverrideVel, double* dpOverrideAccelDecel, long lTarget, DWORD dwOverrideMode);
// In Electric Gear mode, set gear ratio between master axis and slave axis.
// dSlaveRatio : Gear ratio of slave against to master axis ( 0 : 0% , 0.5 : 50%, 1 : 100%)
DWORD    __stdcall AxmLinkSetMode(long lMasterAxisNo, long lSlaveAxisNo, double dSlaveRatio);
// In Electric Gear mode, return gear ratio between master axis and slave axis.
DWORD    __stdcall AxmLinkGetMode(long lMasterAxisNo, long *lpSlaveAxisNo, double *dpGearRatio);
// Reset electric gear ration between Master axis and slave axis.
DWORD    __stdcall AxmLinkResetMode(long lMasterAxisNo);
//======== API related to gentry ===========================================================================================================================================================
// Motion module supports gentry move system control which two axes are linked mechanically..
// When set master axis for gentry control by using this API, relevant slave axis synchronizes with master axis and moves.
// However after setting of gentry, even if any move command or stop command is directed, they are ignored
// uSlHomeUse     : Whether to use home of slave axis or not ( 0 - 2)
//             (0 : Search home of master axis without using home of slave axis.)
//             (1 : Search home of master axis, slave axis. Compensating by applying slave dSlOffset value.)
//             (2 : Search home of master axis, slave axis. No compensating by applying slave dSlOffset value.))
// dSlOffset      : Offset value of slave axis
// dSlOffsetRange : Set offset value range of slave axis.
// Caution in use : When gentry is enabled, it is normal operation if the slave axis is verified as Inmotion by AxmStatusReadMotion API in its motion, and verified as True.
//                When slave axis is verified by AxmStatusReadMotion, if InMotion is False then Gantry Enable is not available, therefore verify whether alarm hits limit.
DWORD    __stdcall AxmGantrySetEnable(long lMasterAxisNo, long lSlaveAxisNo, DWORD uSlHomeUse, double dSlOffset, double dSlOffsetRange);
// The method to know offset value of Slave axis.
// A. Servo-On both master and slave.
// B. After set uSlHomeUse = 2 in AxmGantrySetEnableAPI, then search home by using  AxmHomeSetStart API.
// C. After search home, twisted offset value of master axis and slave axis can be seen by reading command value of master axis.
// D. Read Offsetvalue, and put it into dSlOffset argument of AxmGantrySetEnable API.
// E. As dSlOffset value is the slave axis value against to master axis, put its value with reversed sign as ?dSlOffset.
// F. dSIOffsetRange means the range of Slave Offset, it is used to originate error when it is out of the specified range.
// G. If the offset has been input into AxmGantrySetEnable API, in AxmGantrySetEnable API,after  set uSlHomeUse = 1 then search home by using AxmHomeSetStart API.

// In gentry move, return parameter set by user.
DWORD    __stdcall AxmGantryGetEnable(long lMasterAxisNo, DWORD *upSlHomeUse, double *dpSlOffset, double *dpSlORange, DWORD *upGatryOn);
// Motion module releases gentry move system control which two axes are linked mechanically.
DWORD    __stdcall AxmGantrySetDisable(long lMasterAxisNo, long lSlaveAxisNo);
// Only for PCI-Rxx04-MLII.
// Set Synchronous compensation of Gentry System.
// lMasterGain, lSlaveGain : Set % value of Between the two axes about position deviation.
// lMasterGain, lSlaveGain : If Set Input 0 Not Use. Default value : 0%
DWORD    __stdcall AxmGantrySetCompensationGain(long lMasterAxisNo, long lMasterGain, long lSlaveGain);
// Return Synchronous compensation of Gentry System.
DWORD    __stdcall AxmGantryGetCompensationGain(long lMasterAxisNo, long *lpMasterGain, long *lpSlaveGain);
// Do linear interpolate. (Software)
// API which moves multi-axis linear interpolation by specifying start point and ending point. It escapes from API after commencing of move.
// When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the queue which moves linear interpolation by specifying start point and ending point in the specified  coordinates system.
// For the continuous interpolation move of linear profile, save it in internal queue and start by using AxmContiStart API.
DWORD    __stdcall AxmLineMoveEx2(long lCoord, double *dpEndPos, double dVel, double dAccel, double dDecel);