Library/AXL(Library)/Visual Basic/AXM.bas


' Is set by the distance to the target axis position or the position to increase or decrease the movement begins.
' lEvnetAxisNo    : Start condition occurs axis.
' dComparePosition: Conditions Occurrence Area of Start condition occurs axis.
' uPositionSource : Set Conditions Occurrence Area of Start condition occurs axis => COMMAND(0), ACTUAL(1)
' Cancellations after reservation AxmMoveStop, AxmMoveEStop, AxmMoveSStop use
' Motion Axis and Start condition occurs axis must be In same group(case by 2V04 In same module).
Public Declare Function AxmMoveStartPosWithPosEvent Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lEventAxisNo As Long, ByVal dComparePosition As Double, ByVal uPositionSource As Long) As Long


' It slowdown stops by deceleration set for specific axis.
' dDecel : Deceleration value when stop.
Public Declare Function AxmMoveStop Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dDecel As Double) As Long
' It slowdown stops by deceleration set for specific axis.(PCI-Nx04 Only)
' This API can decelerating immediately refardless of current acceleration/deceleration state. Also, it can be used for limited drive.
' -- Applicable functions : AxmMoveStartPos, AxmMoveVel, AxmLineMoveEx2.
' dDecel : Deceleration rate value at stop.
' Note : Deceleration rate value should be greater than or equal to deceleration rate of initial setting.
' Note : When deceleration setting is set to time unit, It must be less than or equal to initial settling time.
Public Declare Function AxmMoveStopEx Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dDecel As Double) As Long
' Stops specific axis emergently .
Public Declare Function AxmMoveEStop Lib "AXL.dll" (ByVal lAxisNo As Long) As Long
' Stops specific axis slow down.
Public Declare Function AxmMoveSStop Lib "AXL.dll" (ByVal lAxisNo As Long) As Long


'========= Overdrive API ============================================================================

' Overdrives position.
' Adjust number of specific pulse before the move of specific axis is finished.
' Cautions : In here when put in the position subjected to overdrive, as the travel distance is put into the position value of relative form,
'            position must be put in as position value of relative form.
Public Declare Function AxmOverridePos Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dOverridePos As Double) As Long


' Set the maximum velocity subjected to overdirve before velocity overdriving of specific axis.
' Caution : If the velocity overdrive is done 5 times, the max velocity shall be set among them.
Public Declare Function AxmOverrideSetMaxVel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dOverrideMaxVel As Double) As Long

' Overdrive velocity.
' Set velocity variably during the move of specific axis. (Make sure to set variably during the motion.)
' Caution: Before use of AxmOverrideVel API, set the maximum velocity which can be set by AxmOverrideMaxVel
' EX> If velocity overdrive two times,
' 1. Set the highest velocity among the two as the highest setting velocity of AxmOverrideMaxVel.
' 2. Set the AxmOverrideVel  variably with the velocity in the moving of AxmMoveStartPos execution specific axis (including move API all) as the first velocity.
' 3. Set the AxmOverrideVel  variably with the velocity in the moving of specific axis (including move API all) as the 2nd velocity.
Public Declare Function AxmOverrideVel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dOverrideVel As Double) As Long


' Overdrive velocity.
' Set velocity variably during the move of specific axis. (Make sure to set variably during the motion.)
' Caution: Before use of AxmOverrideVel API, set the maximum velocity which can be set by AxmOverrideMaxVel
' EX> If velocity overdrive two times,
' 1. Set the highest velocity among the two as the highest setting velocity of AxmOverrideMaxVel.
' 2. Set the AxmOverrideAccelVelDecel  variably with the velocity in the moving of AxmMoveStartPos execution specific axis (including move API all) as the first velocity.
' 3. Set the AxmOverrideAccelVelDecel  variably with the velocity in the moving of specific axis (including move API all) as the 2nd velocity.
Public Declare Function AxmOverrideAccelVelDecel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dOverrideVel As Double, ByVal dMaxAccel As Double, ByVal dMaxDecel As Double) As Long


' Velocity overdrive at certain timing.
' API which becomes overdrive at the position when a certain position point and velocity to be overdrived
' lTarget : COMMAND(0), ACTUAL(1)
Public Declare Function AxmOverrideVelAtPos Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal dOverridePos As Double, ByVal dOverrideVel As Double, ByVal lTarget As Long) As Long
' Override with specified velocity at specified times.
' lArraySize     : Set number of positions to override.
' *dpOverridePos : An array of positions to override. (It should be greater than or equal to set value at lArraySize.)
' *dpOverrideVel : Velocity array to be changed at position to override. (It should be greater than or equal to set value at lArraySize.)
' lTarget        : COMMAND(0), ACTUAL(1)
' dwOverrideMode : Specify how to start overriding.
'                : OVERRIDE_POS_START(0) - Start override at specified velocity at specified position.
'                : OVERRIDE_POS_END(1)   - Start override in advance to become specified velocity at specified position.
Public Declare Function AxmOverrideVelAtMultiPos Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lArraySize As Long, ByRef dpOverridePos As Double, ByRef dpOverrideVel As Double, ByVal lTarget As Long, ByVal dwOverrideMode As Long) As Long

'========= Move API by master, slave gear ration. ===========================================================================
' Override with specified velocity/acceleration/deceleration at specified times.(MLII Only)
' lArraySize     : Set number of positions to override.
' *dpOverridePos : An array of positions to override. (It should be greater than or equal to set value at lArraySize.)
' *dpOverrideVel : Velocity array to be changed at position to override. (It should be greater than or equal to set value at lArraySize.)
' *dpOverrideAccelDecel : Acceleration/Deceleration array to be changed at position to override. (It should be greater than or equal to set value at lArraySize.)
' lTarget        : COMMAND(0), ACTUAL(1)
' dwOverrideMode : Specify how to start overriding.
'                : OVERRIDE_POS_START(0) - Start overriding at specified velocity at specified position.
'                : OVERRIDE_POS_END(1)   - Start overriding in advance to become specified velocity at specified position.
'                : OVERRIDE_POS_AUTO(2)  - Start overriding at specified velocity at specified position when in acceleration section.
'                                          Also, start overriding in advance to become specified velocity at specified position when in deceleration section.


Public Declare Function AxmOverrideVelAtMultiPos2 Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lArraySize As Long, ByRef dpOverridePos As Double, ByRef dpOverrideVel As Double, ByRef dpOverrideAccelDecel As Double, ByVal lTarget As Long, ByVal dwOverrideMode As Long) As Long


'========= Move API by master, slave gear ration. ===========================================================================

' In Electric Gear mode, set gear ratio between master axis and slave axis.
' dSlaveRatio : Gear ratio of slave against to master axis ( 0 : 0% , 0.5 : 50%, 1 : 100%)
Public Declare Function AxmLinkSetMode Lib "AXL.dll" (ByVal lMasterAxisNo As Long, ByVal lSlaveAxisNo As Long, ByVal dSlaveRatio As Double) As Long
' In Electric Gear mode, return gear ratio between master axis and slave axis.
Public Declare Function AxmLinkGetMode Lib "AXL.dll" (ByVal lMasterAxisNo As Long, ByVal lSlaveAxisNo As Long, ByRef dpGearRatio As Double) As Long
' Reset electric gear ration between Master axis and slave axis.
Public Declare Function AxmLinkResetMode Lib "AXL.dll" (ByVal lMasterAxisNo As Long) As Long


'======== API related to gentry ===========================================================================================================================================================
' Motion module supports gentry move system control which two axes are linked mechanically..
' When set master axis for gentry control by using this API, relevant slave axis synchronizes with master axis and moves.
' However after setting of gentry, even if any move command or stop command is directed, they are ignored
' uSlHomeUse     : Whether to use home of slave axis or not ( 0 - 2)
'             (0 : Search home of master axis without using home of slave axis.)
'             (1 : Search home of master axis, slave axis. Compensating by applying slave dSlOffset value.)
'             (2 : Search home of master axis, slave axis. No compensating by applying slave dSlOffset value.))
' dSlOffset      : Offset value of slave axis
' dSlOffsetRange : Set offset value range of slave axis.
' Caution in use : When gentry is enabled, it is normal operation if the slave axis is verified as Inmotion by AxmStatusReadMotion API in its motion, and verified as True.

'                When slave axis is verified by AxmStatusReadMotion, if InMotion is False then Gantry Enable is not available, therefore verify whether alarm hits limit.

Public Declare Function AxmGantrySetEnable Lib "AXL.dll" (ByVal lMasterAxisNo As Long, ByVal lSlaveAxisNo As Long, ByVal uSlHomeUse As Long, ByVal dSlOffset As Double, ByVal dSlOffsetRange As Double) As Long



' The method to know offset value of Slave axis.
' A. Servo-On both master and slave.
' B. After set uSlHomeUse = 2 in AxmGantrySetEnableAPI, then search home by using  AxmHomeSetStart API.
' C. After search home, twisted offset value of master axis and slave axis can be seen by reading command value of master axis.
' D. Read Offsetvalue, and put it into dSlOffset argument of AxmGantrySetEnable API.
' E. As dSlOffset value is the slave axis value against to master axis, put its value with reversed sign as ?dSlOffset.
' F. dSIOffsetRange means the range of Slave Offset, it is used to originate error when it is out of the specified range.
' G. If the offset has been input into AxmGantrySetEnable API, in AxmGantrySetEnable API,after  set uSlHomeUse = 1 then search home by using AxmHomeSetStart API.

' In gentry move, return parameter set by user.
Public Declare Function AxmGantryGetEnable Lib "AXL.dll" (ByVal lMasterAxisNo As Long, ByRef upSlHomeUse As Long, ByRef dpSlOffset As Double, ByRef dpSlORange As Double, ByRef upGatryOn As Long) As Long
' Motion module releases gentry move system control which two axes are linked mechanically.
Public Declare Function AxmGantrySetDisable Lib "AXL.dll" (ByVal lMasterAxisNo As Long, ByVal lSlaveAxisNo As Long) As Long


' Only for PCI-Rxx04-MLII.
' Set Synchronous compensation of Gentry System.
' lMasterGain, lSlaveGain : Set % value of Between the two axes about position deviation.
' lMasterGain, lSlaveGain : If Set Input 0 Not Use. Default value : 0%
Public Declare Function AxmGantrySetCompensationGain Lib "AXL.dll" (ByVal lMasterAxisNo As Long, ByVal lMasterGain As Long, ByVal lSlaveGain As Long) As Long
' Return Synchronous compensation of Gentry System.
Public Declare Function AxmGantryGetCompensationGain Lib "AXL.dll" (ByVal lMasterAxisNo As Long, ByRef lpMasterGain As Long, ByRef lpSlaveGain As Long) As Long

